# Pydoku

./: README.md
pyduko/: pydoku.py  pyproject.toml
