[tool.poetry]
name = "pyduko"
version = "0.1.0"
description = "Pydoku is a simple project to play sudoku in an interactive window. This project is made with Python and Pygame. The goal was to implement a sudoku solver and a nice GUI."
authors = ["tristanqtn <tristan.querton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
